  a previous clause
  (Gabriel Scherer and Thomas Refis, review by Luc Maranget)

- GPR#1554: warnings 52 and 57: fix reference to manual detailed explanation
  (Florian Angeletti, review by Thomas Refis and Gabriel Scherer)

- GPR#1618: add the -dno-unique-ids and -dunique-ids compiler flags
  (Sébastien Hinderer, review by Leo White and Damien Doligez)

### Code generation and optimizations:

- GPR#1370: Fix code duplication in Cmmgen
  (Vincent Laviron, with help from Pierre Chambart,
   reviews by Gabriel Scherer and Luc Maranget)

- MPR#7630 GPR#1401: Faster compilation of large modules with Flambda.
  (Pierre Chambart, report by Emilio Jesús Gallego Arias,
  Pierre-Marie Pédrot and Paul Steckler, review by Gabriel Scherer
  and Leo White)

- GPR#1486: ARM 32-bit port: add support for ARMv8 in 32-bit mode,
  a.k.a. AArch32.
  For this platform, avoid ITE conditional instruction blocks and use
  simpler IT blocks instead
  (Xavier Leroy, review by Mark Shinwell)

- GPR#1487: Treat negated float comparisons more directly
  (Leo White, review by Xavier Leroy)

### Runtime system:

- MPR#6411, GPR#1535: don't compile everything with -static-libgcc on mingw32,
  only dllbigarray.dll and libbigarray.a. Allows the use of C++ libraries which
  raise exceptions.
  (David Allsopp)

- GPR#1431: remove ocamlrun dependencies on curses/terminfo/termcap C library
  (Xavier Leroy, review by Daniel Bünzli)

- GPR#1478: The Spacetime profiler now works under Windows (but it is not yet
  able to collect profiling information from C stubs).
  (Nicolás Ojeda Bär, review by Xavier Leroy, Mark Shinwell)

- GPR#1483: fix GC freelist accounting for chunks larger than the maximum block
  size.
  (David Allsopp and Damien Doligez)

- GPR#1526: install the debug and instrumented runtimes
  (lib{caml,asm}run{d,i}.a)
  (Gabriel Scherer, reminded by Julia Lawall)

- GPR#1563: simplify implementation of LSRINT and ASRINT
  (Max Mouratov, review by Frédéric Bour)
